--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       class="top-right-img"
     />
     <h1>Rollout TLM05e</h1>
-    <p class="small">📅 <strong>25 Setembro 2025</strong> — 16:30–20:00</p>
+    <p class="small">📅 <strong>25 de Setembro de 2025</strong> — 16:30 – 20:00</p>
     <p class="small">
       📍 Salão Nobre, Pavilhão Central, Instituto Superior Técnico
     </p>
