--- a/index.html
+++ b/index.html
@@ -119,5 +119,9 @@
     alt="Event Banner"
     class="below-card-img"
   />
+  <footer>
+    Para outros calendários, adicione
+    <a href="event_no_reminder.ics" download>este ficheiro .ics</a>
+  </footer>
 </body>
 </html>
