--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   />
   <footer>
     Para outros calendários, adicione
-    <a href="event_no_reminder.ics" download>este ficheiro .ics</a>
+    <a href="rollout.ics" download>este ficheiro .ics</a>
   </footer>
 </body>
 </html>
