--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     class="below-card-img"
   />
   <footer>
-    Para outros calendários, adicione
-    <a href="rollout.ics" download>este ficheiro .ics</a>
+    Para outros calendários, 
+    <a href="rollout.ics" download>adicione</a>.
   </footer>
 </body>
 </html>
