--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Confirmação de Presença</title>
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    rel="stylesheet"
+  />
   <style>
     body {
       font-family: system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
@@ -19,14 +23,11 @@
       padding: 30px;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-      max-width: 420px;
+      max-width: 680px;
       width: 100%;
       text-align: center;
     }
-    h1 {
-      margin-bottom: 20px;
-      font-size: 22px;
-    }
+    h1 { margin-bottom: 20px; font-size: 22px; }
     .btn {
       padding: 10px 18px;
       margin: 8px;
@@ -47,6 +48,13 @@
       border: 1px solid #ccc;
     }
     .hidden { display: none; }
+    .below-image {
+      max-width: 680px;
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -65,55 +73,50 @@
     <button class="btn yes" id="confirmBtn">Confirmar</button>
   </div>
 
-  <!-- Step 3 -->
-  <div class="card hidden" id="step3">
-    <h1>Obrigado pela sua resposta 🙏</h1>
-    <p>Será redirecionado...</p>
+  <!-- Step 3 (event page) -->
+  <div class="hidden" id="step3">
+    <div class="card">
+      <img class="logo" src="https://i.imgur.com/HEBnxxS.png" alt="Logo TLMoto" style="position:absolute;top:0;right:0;width:75px;" />
+      <h1>Rollout TLM05e</h1>
+      <p class="small">📅 <strong>25 de Setembro de 2025</strong> — 16:30 – 20:00</p>
+      <p class="small">📍 Salão Nobre, Pavilhão Central, Instituto Superior Técnico</p>
+      <p class="add-event">Adicionar evento:</p>
+      <div class="links">
+        <a class="btn yes" target="_blank" rel="noopener"
+          href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Rollout%20TLM05e&dates=20250925T153000Z/20250925T190000Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
+          <i class="fab fa-google"></i> Google Calendar</a>
+        <a class="btn no" target="_blank" rel="noopener"
+          href="https://outlook.live.com/calendar/0/deeplink/compose?path=/calendar/action/compose&rru=addevent&subject=Rollout%20TLM05e&startdt=2025-09-25T15%3A30%3A00Z&enddt=2025-09-25T19%3A00%3A00Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
+          <i class="fab fa-microsoft"></i> Outlook</a>
+      </div>
+    </div>
+    <img class="below-image" src="https://i.imgur.com/nc9QWA8.jpeg" alt="TLMoto Image" />
+    <footer>Para outros calendários, <a href="rollout.ics" download>adicione</a>.</footer>
   </div>
 
   <script>
-    // Get elements
     const step1 = document.getElementById("step1");
     const step2 = document.getElementById("step2");
     const step3 = document.getElementById("step3");
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-    const confirmBtn = document.getElementById("confirmBtn");
-
-    // If Yes
-    yesBtn.addEventListener("click", () => {
+    document.getElementById("yesBtn").addEventListener("click", () => {
       step1.classList.add("hidden");
       step2.classList.remove("hidden");
     });
-
-    // If No
-    noBtn.addEventListener("click", () => {
+    document.getElementById("noBtn").addEventListener("click", () => {
       step1.classList.add("hidden");
-      step3.classList.remove("hidden");
       setTimeout(() => {
         window.location.href = "https://tlmoto.tecnico.ulisboa.pt";
-      }, 2000);
+      }, 1000);
     });
-
-    // Confirm attendance
-    confirmBtn.addEventListener("click", () => {
+    document.getElementById("confirmBtn").addEventListener("click", () => {
       const name = document.getElementById("name").value.trim();
       const role = document.getElementById("role").value.trim();
-
       if (!name || !role) {
         alert("Por favor, preencha todos os campos.");
         return;
       }
-
-      // For now just log it (you can later send it to Google Sheets / Airtable)
-      console.log("Nome:", name, "Função:", role);
-
       step2.classList.add("hidden");
       step3.classList.remove("hidden");
-
-      setTimeout(() => {
-        window.location.href = "rollout.html"; // <- your event page
-      }, 2000);
     });
   </script>
 </body>
