--- a/index.html
+++ b/index.html
@@ -3,43 +3,60 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Confirmação de Presença</title>
-  <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    rel="stylesheet"
-  />
+  <title>Rollout TLM05e</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     body {
       font-family: system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      padding: 30px;
+      gap: 18px;
       min-height: 100vh;
       background: #f7f7fb;
-      margin: 0;
+      color: #111;
+      position: relative;
     }
-    .card {
+    .hidden { display: none; }
+
+    /* Persistent Logo */
+    .logo-fixed {
+      position: fixed;
+      top: 12px;
+      right: 12px;
+      width: 75px;
+      height: auto;
+      user-select: none;
+      pointer-events: none;
+    }
+
+    /* RSVP Prompt */
+    .rsvp-card, .form-card {
       background: white;
-      padding: 30px;
+      padding: 22px;
       border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-      max-width: 680px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
+      max-width: 480px;
       width: 100%;
       text-align: center;
     }
-    h1 { margin-bottom: 20px; font-size: 22px; }
-    .btn {
-      padding: 10px 18px;
-      margin: 8px;
+    .rsvp-card h2, .form-card h2 { margin: 0 0 16px 0; }
+    .rsvp-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+    }
+    .rsvp-buttons button, .form-card button {
+      padding: 10px 16px;
       border: none;
       border-radius: 8px;
-      font-size: 16px;
       font-weight: 600;
       cursor: pointer;
-      color: white;
     }
-    .yes { background: #28a745; }
-    .no { background: #dc3545; }
+    .yes-btn { background: #0078d4; color: white; }
+    .no-btn { background: #db4437; color: white; }
     input {
       width: 90%;
       padding: 10px;
@@ -47,47 +64,83 @@
       border-radius: 6px;
       border: 1px solid #ccc;
     }
-    .hidden { display: none; }
+
+    /* Rollout Page */
+    .card {
+      background: white;
+      padding: 22px;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
+      max-width: 680px;
+      width: 100%;
+      text-align: center;
+      position: relative;
+    }
+    h1 { margin: 0 0 12px 0; font-size: 20px; }
+    p.small { margin: 0 0 8px 0; color: #555; line-height: 1.4; }
+    .links { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-top: 12px; }
+    .btn {
+      padding: 10px 14px;
+      border-radius: 8px;
+      text-decoration: none;
+      color: white;
+      font-weight: 600;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 16px;
+      line-height: 1;
+    }
+    .google { background: #db4437; }
+    .outlook { background: #0078d4; }
+    p.add-event { margin-top: 16px; color: #444; }
     .below-image {
       max-width: 680px;
       width: 100%;
       border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
       margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <!-- Step 1 -->
-  <div class="card" id="step1">
-    <h1>Vai estar presente no Rollout TLM05e?</h1>
-    <button class="btn yes" id="yesBtn">Sim</button>
-    <button class="btn no" id="noBtn">Não</button>
+
+  <!-- Persistent Logo -->
+  <img class="logo-fixed" src="https://i.imgur.com/HEBnxxS.png" alt="Logo TLMoto" />
+
+  <!-- Step 1: RSVP Prompt -->
+  <div id="rsvp" class="rsvp-card">
+    <h2>Vais estar presente no Rollout da TLM05e?</h2>
+    <div class="rsvp-buttons">
+      <button class="yes-btn" onclick="showForm()">Sim</button>
+      <button class="no-btn" onclick="submitNo()">Não</button>
+    </div>
   </div>
 
-  <!-- Step 2 -->
-  <div class="card hidden" id="step2">
-    <h1>Confirme a sua presença</h1>
+  <!-- Step 2: Name + Role Form -->
+  <div id="form" class="form-card hidden">
+    <h2>Confirme a sua presença</h2>
     <input type="text" id="name" placeholder="O seu nome" />
     <input type="text" id="role" placeholder="Função (ex: estudante, sponsor...)" />
-    <button class="btn yes" id="confirmBtn">Confirmar</button>
+    <button class="yes-btn" onclick="submitYes()">Confirmar</button>
   </div>
 
-  <!-- Step 3 (event page) -->
-  <div class="hidden" id="step3">
+  <!-- Step 3: Rollout Page -->
+  <div id="rollout" class="hidden">
     <div class="card">
-      <img class="logo" src="https://i.imgur.com/HEBnxxS.png" alt="Logo TLMoto" style="position:absolute;top:0;right:0;width:75px;" />
       <h1>Rollout TLM05e</h1>
       <p class="small">📅 <strong>25 de Setembro de 2025</strong> — 16:30 – 20:00</p>
       <p class="small">📍 Salão Nobre, Pavilhão Central, Instituto Superior Técnico</p>
       <p class="add-event">Adicionar evento:</p>
       <div class="links">
-        <a class="btn yes" target="_blank" rel="noopener"
+        <a class="btn google" target="_blank" rel="noopener"
           href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Rollout%20TLM05e&dates=20250925T153000Z/20250925T190000Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
-          <i class="fab fa-google"></i> Google Calendar</a>
-        <a class="btn no" target="_blank" rel="noopener"
+          <i class="fab fa-google"></i>Google Calendar
+        </a>
+        <a class="btn outlook" target="_blank" rel="noopener"
           href="https://outlook.live.com/calendar/0/deeplink/compose?path=/calendar/action/compose&rru=addevent&subject=Rollout%20TLM05e&startdt=2025-09-25T15%3A30%3A00Z&enddt=2025-09-25T19%3A00%3A00Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
-          <i class="fab fa-microsoft"></i> Outlook</a>
+          <i class="fab fa-microsoft"></i>Outlook
+        </a>
       </div>
     </div>
     <img class="below-image" src="https://i.imgur.com/nc9QWA8.jpeg" alt="TLMoto Image" />
@@ -95,29 +148,40 @@
   </div>
 
   <script>
-    const step1 = document.getElementById("step1");
-    const step2 = document.getElementById("step2");
-    const step3 = document.getElementById("step3");
-    document.getElementById("yesBtn").addEventListener("click", () => {
-      step1.classList.add("hidden");
-      step2.classList.remove("hidden");
-    });
-    document.getElementById("noBtn").addEventListener("click", () => {
-      step1.classList.add("hidden");
-      setTimeout(() => {
-        window.location.href = "https://tlmoto.tecnico.ulisboa.pt";
-      }, 1000);
-    });
-    document.getElementById("confirmBtn").addEventListener("click", () => {
-      const name = document.getElementById("name").value.trim();
-      const role = document.getElementById("role").value.trim();
-      if (!name || !role) {
-        alert("Por favor, preencha todos os campos.");
-        return;
-      }
-      step2.classList.add("hidden");
-      step3.classList.remove("hidden");
-    });
+    const recordId = new URLSearchParams(window.location.search).get('record'); // get record ID from URL
+    const webhookUrl = "https://hook.eu2.make.com/m86th1bc3jmbwvt45cpuet3ts9w9jwrs";
+
+    function showForm() {
+      document.getElementById('rsvp').classList.add('hidden');
+      document.getElementById('form').classList.remove('hidden');
+    }
+
+    async function submitYes() {
+      const name = document.getElementById('name').value.trim();
+      const role = document.getElementById('role').value.trim();
+      if (!name || !role) { alert("Por favor, preencha todos os campos."); return; }
+
+      await fetch(webhookUrl, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ recordId, going: "Yes", name, role })
+      });
+
+      document.getElementById('form').classList.add('hidden');
+      document.getElementById('rollout').classList.remove('hidden');
+    }
+
+    async function submitNo() {
+      await fetch(webhookUrl, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ recordId, going: "No" })
+      });
+
+      window.location.href = "https://tlmoto.tecnico.ulisboa.pt";
+    }
   </script>
+
 </body>
 </html>
+
