--- a/index.html
+++ b/index.html
@@ -1,187 +1,156 @@
 <!doctype html>
 <html lang="pt-PT">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Rollout TLM05e</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-  <style>
-    body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 30px;
-      gap: 18px;
-      min-height: 100vh;
-      background: #f7f7fb;
-      color: #111;
-      position: relative;
-    }
-    .hidden { display: none; }
-
-    /* Persistent Logo */
-    .logo-fixed {
-      position: fixed;
-      top: 12px;
-      right: 12px;
-      width: 75px;
-      height: auto;
-      user-select: none;
-      pointer-events: none;
-    }
-
-    /* RSVP Prompt */
-    .rsvp-card, .form-card {
-      background: white;
-      padding: 22px;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
-      max-width: 480px;
-      width: 100%;
-      text-align: center;
-    }
-    .rsvp-card h2, .form-card h2 { margin: 0 0 16px 0; }
-    .rsvp-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-    }
-    .rsvp-buttons button, .form-card button {
-      padding: 10px 16px;
-      border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-    }
-    .yes-btn { background: #0078d4; color: white; }
-    .no-btn { background: #db4437; color: white; }
-    input {
-      width: 90%;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-
-    /* Rollout Page */
-    .card {
-      background: white;
-      padding: 22px;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
-      max-width: 680px;
-      width: 100%;
-      text-align: center;
-      position: relative;
-    }
-    h1 { margin: 0 0 12px 0; font-size: 20px; }
-    p.small { margin: 0 0 8px 0; color: #555; line-height: 1.4; }
-    .links { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-top: 12px; }
-    .btn {
-      padding: 10px 14px;
-      border-radius: 8px;
-      text-decoration: none;
-      color: white;
-      font-weight: 600;
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      font-size: 16px;
-      line-height: 1;
-    }
-    .google { background: #db4437; }
-    .outlook { background: #0078d4; }
-    p.add-event { margin-top: 16px; color: #444; }
-    .below-image {
-      max-width: 680px;
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.06);
-      margin-top: 10px;
-    }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Rollout TLM05e</title>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+<style>
+body { font-family: system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial; display:flex; flex-direction:column; align-items:center; justify-content:flex-start; padding:30px; gap:18px; min-height:100vh; background:#f7f7fb; color:#111; position:relative;}
+.hidden { display:none; }
+.logo-fixed { position:fixed; top:12px; right:12px; width:75px; height:auto; user-select:none; pointer-events:none; }
+.rsvp-card, .form-card { background:white; padding:22px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.06); max-width:480px; width:100%; text-align:center;}
+.rsvp-card h2, .form-card h2 { margin:0 0 16px 0;}
+.rsvp-buttons { display:flex; justify-content:center; gap:12px;}
+.rsvp-buttons button, .form-card button { padding:10px 16px; border:none; border-radius:8px; font-weight:600; cursor:pointer;}
+.yes-btn { background:#0078d4; color:white; }
+.no-btn { background:#db4437; color:white; }
+input, select { width:90%; padding:10px; margin:8px 0; border-radius:6px; border:1px solid #ccc; }
+.card { background:white; padding:22px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.06); max-width:680px; width:100%; text-align:center; position:relative; }
+h1 { margin:0 0 12px 0; font-size:20px;}
+p.small { margin:0 0 8px 0; color:#555; line-height:1.4;}
+.links { display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin-top:12px;}
+.btn { padding:10px 14px; border-radius:8px; text-decoration:none; color:white; font-weight:600; display:inline-flex; align-items:center; gap:8px; font-size:16px; line-height:1;}
+.google { background:#db4437; }
+.outlook { background:#0078d4; }
+p.add-event { margin-top:16px; color:#444; }
+.below-image { max-width:680px; width:100%; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.06); margin-top:10px;}
+</style>
 </head>
 <body>
 
-  <!-- Persistent Logo -->
-  <img class="logo-fixed" src="https://i.imgur.com/HEBnxxS.png" alt="Logo TLMoto" />
+<img class="logo-fixed" src="https://i.imgur.com/HEBnxxS.png" alt="Logo TLMoto" />
 
-  <!-- Step 1: RSVP Prompt -->
-  <div id="rsvp" class="rsvp-card">
-    <h2>Vais estar presente no Rollout da TLM05e?</h2>
-    <div class="rsvp-buttons">
-      <button class="yes-btn" onclick="showForm()">Sim</button>
-      <button class="no-btn" onclick="submitNo()">Não</button>
+<!-- Step 1: RSVP -->
+<div id="rsvp" class="rsvp-card">
+  <h2>Vais estar presente no Rollout da TLM05e?</h2>
+  <div class="rsvp-buttons">
+    <button class="yes-btn" onclick="showType()">Sim</button>
+    <button class="no-btn" onclick="submitNo()">Não</button>
+  </div>
+</div>
+
+<!-- Step 2: Type of participant -->
+<div id="type" class="form-card hidden">
+  <h2>Sou:</h2>
+  <div class="rsvp-buttons">
+    <button class="yes-btn" onclick="showCompanyForm()">Uma empresa</button>
+    <button class="no-btn" onclick="showFinalForm('member')">Membro da comunidade académica</button>
+  </div>
+</div>
+
+<!-- Step 3: Company form -->
+<div id="company" class="form-card hidden">
+  <h2>Quantas pessoas vão participar? (1-5)</h2>
+  <select id="numPeople" onchange="renderPeopleFields()">
+    <option value="">Escolha</option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+  </select>
+  <div id="peopleFields"></div>
+  <input type="text" id="matricula" placeholder="Matrícula" />
+  <button class="yes-btn" onclick="submitCompany()">Confirmar</button>
+</div>
+
+<!-- Step 4: Rollout page -->
+<div id="rollout" class="hidden">
+  <div class="card">
+    <h1>Rollout TLM05e</h1>
+    <p class="small">📅 <strong>25 de Setembro de 2025</strong> — 16:30 – 20:00</p>
+    <p class="small">📍 Salão Nobre, Pavilhão Central, Instituto Superior Técnico</p>
+    <p class="add-event">Adicionar evento:</p>
+    <div class="links">
+      <a class="btn google" target="_blank" rel="noopener"
+         href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Rollout%20TLM05e&dates=20250925T153000Z/20250925T190000Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
+        <i class="fab fa-google"></i>Google Calendar
+      </a>
+      <a class="btn outlook" target="_blank" rel="noopener"
+         href="https://outlook.live.com/calendar/0/deeplink/compose?path=/calendar/action/compose&rru=addevent&subject=Rollout%20TLM05e&startdt=2025-09-25T15%3A30%3A00Z&enddt=2025-09-25T19%3A00%3A00Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
+        <i class="fab fa-microsoft"></i>Outlook
+      </a>
     </div>
   </div>
+  <img class="below-image" src="https://i.imgur.com/nc9QWA8.jpeg" alt="TLMoto Image" />
+  <footer>Para outros calendários, <a href="rollout.ics" download>adicione</a>.</footer>
+</div>
 
-  <!-- Step 2: Name + Role Form -->
-  <div id="form" class="form-card hidden">
-    <h2>Confirme a sua presença</h2>
-    <input type="text" id="name" placeholder="O seu nome" />
-    <input type="text" id="role" placeholder="Função (ex: estudante, sponsor...)" />
-    <button class="yes-btn" onclick="submitYes()">Confirmar</button>
-  </div>
+<script>
+const recordId = new URLSearchParams(window.location.search).get('record');
+const webhookUrl = "https://hook.eu2.make.com/m86th1bc3jmbwvt45cpuet3ts9w9jwrs";
 
-  <!-- Step 3: Rollout Page -->
-  <div id="rollout" class="hidden">
-    <div class="card">
-      <h1>Rollout TLM05e</h1>
-      <p class="small">📅 <strong>25 de Setembro de 2025</strong> — 16:30 – 20:00</p>
-      <p class="small">📍 Salão Nobre, Pavilhão Central, Instituto Superior Técnico</p>
-      <p class="add-event">Adicionar evento:</p>
-      <div class="links">
-        <a class="btn google" target="_blank" rel="noopener"
-          href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Rollout%20TLM05e&dates=20250925T153000Z/20250925T190000Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
-          <i class="fab fa-google"></i>Google Calendar
-        </a>
-        <a class="btn outlook" target="_blank" rel="noopener"
-          href="https://outlook.live.com/calendar/0/deeplink/compose?path=/calendar/action/compose&rru=addevent&subject=Rollout%20TLM05e&startdt=2025-09-25T15%3A30%3A00Z&enddt=2025-09-25T19%3A00%3A00Z&location=Sal%C3%A3o%20Nobre%2C%20Pavilh%C3%A3o%20Central%2C%20Instituto%20Superior%20T%C3%A9cnico">
-          <i class="fab fa-microsoft"></i>Outlook
-        </a>
-      </div>
-    </div>
-    <img class="below-image" src="https://i.imgur.com/nc9QWA8.jpeg" alt="TLMoto Image" />
-    <footer>Para outros calendários, <a href="rollout.ics" download>adicione</a>.</footer>
-  </div>
+function showType(){
+  document.getElementById('rsvp').classList.add('hidden');
+  document.getElementById('type').classList.remove('hidden');
+}
 
-  <script>
-    const recordId = new URLSearchParams(window.location.search).get('record'); // get record ID from URL
-    const webhookUrl = "https://hook.eu2.make.com/m86th1bc3jmbwvt45cpuet3ts9w9jwrs";
+function showCompanyForm(){
+  document.getElementById('type').classList.add('hidden');
+  document.getElementById('company').classList.remove('hidden');
+}
 
-    function showForm() {
-      document.getElementById('rsvp').classList.add('hidden');
-      document.getElementById('form').classList.remove('hidden');
-    }
+function renderPeopleFields(){
+  const num = parseInt(document.getElementById('numPeople').value);
+  const container = document.getElementById('peopleFields');
+  container.innerHTML = '';
+  for(let i=1;i<=num;i++){
+    container.innerHTML += `<input type="text" id="person${i}Name" placeholder="Nome pessoa ${i}" />
+                            <input type="text" id="person${i}Role" placeholder="Função pessoa ${i}" />`;
+  }
+}
 
-    async function submitYes() {
-      const name = document.getElementById('name').value.trim();
-      const role = document.getElementById('role').value.trim();
-      if (!name || !role) { alert("Por favor, preencha todos os campos."); return; }
+async function submitCompany(){
+  const num = parseInt(document.getElementById('numPeople').value);
+  if(!num) { alert("Escolha o número de pessoas."); return; }
+  const matricula = document.getElementById('matricula').value.trim();
+  if(!matricula){ alert("Preencha a matrícula."); return; }
+  const people=[];
+  for(let i=1;i<=num;i++){
+    const name=document.getElementById(`person${i}Name`).value.trim();
+    const role=document.getElementById(`person${i}Role`).value.trim();
+    if(!name || !role){ alert(`Preencha nome e função da pessoa ${i}`); return;}
+    people.push({name, role});
+  }
+  await fetch(webhookUrl,{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body: JSON.stringify({recordId, going:"Yes", type:"empresa", matricula, people})
+  });
+  document.getElementById('company').classList.add('hidden');
+  document.getElementById('rollout').classList.remove('hidden');
+}
 
-      await fetch(webhookUrl, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ recordId, going: "Yes", name, role })
-      });
+async function showFinalForm(type){
+  await fetch(webhookUrl,{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body: JSON.stringify({recordId, going:"Yes", type:"member"})
+  });
+  document.getElementById('type').classList.add('hidden');
+  document.getElementById('rollout').classList.remove('hidden');
+}
 
-      document.getElementById('form').classList.add('hidden');
-      document.getElementById('rollout').classList.remove('hidden');
-    }
-
-    async function submitNo() {
-      await fetch(webhookUrl, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ recordId, going: "No" })
-      });
-
-      window.location.href = "https://tlmoto.tecnico.ulisboa.pt";
-    }
-  </script>
+async function submitNo(){
+  await fetch(webhookUrl,{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body: JSON.stringify({recordId, going:"No"})
+  });
+  window.location.href="https://tlmoto.tecnico.ulisboa.pt";
+}
+</script>
 
 </body>
 </html>
-
