--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ p.add-event { margin-top:16px; color:#444; }
 
 <!-- Step 1: RSVP -->
 <div id="rsvp" class="rsvp-card">
-  <h2>Vais estar presente no Rollout da TLM05e?</h2>
+  <h2>Vai estar presente no Rollout da TLM05e?</h2>
   <div class="rsvp-buttons">
     <button class="yes-btn" onclick="showType()">Sim</button>
     <button class="no-btn" onclick="submitNo()">Não</button>
@@ -45,15 +45,15 @@ p.add-event { margin-top:16px; color:#444; }
   <h2>Sou:</h2>
   <div class="rsvp-buttons">
     <button class="yes-btn" onclick="showCompanyForm()">Uma empresa</button>
-    <button class="no-btn" onclick="showFinalForm('member')">Membro da comunidade académica</button>
+    <button class="no-btn" onclick="showFinalForm('member')">Outro</button>
   </div>
 </div>
 
 <!-- Step 3: Company form -->
 <div id="company" class="form-card hidden">
-  <h2>Quantas pessoas vão participar? (1-5)</h2>
+  <h2>Quantas pessoas estarão presentes?</h2>
   <select id="numPeople" onchange="renderPeopleFields()">
-    <option value="">Escolha</option>
+    <option value="">Selecione</option>
     <option value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
@@ -61,7 +61,10 @@ p.add-event { margin-top:16px; color:#444; }
     <option value="5">5</option>
   </select>
   <div id="peopleFields"></div>
-  <input type="text" id="matricula" placeholder="Matrícula" />
+<input type="text" id="matricula" placeholder="Matrícula" />
+<p style="font-size: 0.85em; color: #555; margin-top: 4px;">
+  Matrículas de veículos que necessitarem de estacionamento.
+</p>
   <button class="yes-btn" onclick="submitCompany()">Confirmar</button>
 </div>
 
